--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,13 @@ description = "Python project starter template"
 authors = ["David Adams"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.12"
 
 [tool.poetry.dev-dependencies]
-black = "^20.8b1"
-pytest = "^6.1.1"
-mypy = "^0.790"
-pylama = "^7.7.1"
+black = "^23.9.1"
+pytest = "^7.4.2"
+mypy = "^1.5.1"
+pylama = "^8.4.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
