Update deprecated argument

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,8 +7,7 @@ FROM ${venv_image} as poetry
 USER root
 COPY poetry.lock pyproject.toml ./
 RUN --mount=type=cache,mode=0755,target=/root/.cache/pip \
-  . $VENV_PATH/bin/activate && \
-  poetry install --no-interaction --no-dev
+  poetry install --no-interaction --only main
 
 FROM ${base_image} as runtime
 
